--- a/RNA_ATAC/RNA_Seq_v2.Rmd
+++ b/RNA_ATAC/RNA_Seq_v2.Rmd
@@ -32,22 +32,24 @@ library(ggplot2)
 
 
 ```{r}
-setwd("~/Documents/GitHub/RNA_n_ATAC_hematopoiesis")
-countData=read.csv('complete.csv', header=TRUE,as.is = TRUE, row.names = 1)
-head(countData)
+#setwd("~/Documents/GitHub/RNA_n_ATAC_hematopoiesis")
+countData=read.csv('gene_count_matrix.csv', header=TRUE,as.is = TRUE, row.names = 1)
+countData=as.matrix(countData)
+
 ```
 
 ```{r}
-#countData$gene_id=unlist(lapply(strsplit(countData$gene_id, '|', fixed = TRUE), '[', 2))
- 
-#countData=na.omit(countData)
+row.names(countData)=unlist(lapply(strsplit(row.names(countData), '|', fixed = TRUE), '[', 2))
 
-#rownames(countData) = make.names(countData[,1],unique=TRUE)
+countData <- countData[!grepl("NA..", rownames(countData)),]
+  
+
+rownames(countData) = make.names(row.names(countData),unique=TRUE)
 #countData=countData[,-1]
 ```
 
 ```{r}
-columns=c("SEDM_2P_1","SEDM_2P_2","SEDM_2P_3","SEEM_2P_1","SEEM_2P_2","SEEM_2P_3","SEEM_4P_1","SEEM_4P_2","SEEM_4P_3","PERKi_2N_1","PERKi_2N_2","PERKi_2N_3","T_1","T_2","T_3","PERKi_2P_1","PERKi_2P_2","PERKi_2P_3")
+columns=c("SEDM_2P_1","SEDM_2P_2","SEDM_2P_3","SEEM_2P_1","SEEM_2P_2","SEEM_2P_3","SEEM_4P_1","SEEM_4P_2","SEEM_4P_3","PERKi_2P_1","PERKi_2P_2","PERKi_2P_3", "PERKi_2N_1","PERKi_2N_2","PERKi_2N_3","T_1","T_2","T_3")
 ```
 
 
@@ -58,11 +60,11 @@ barplot(colSums(countData),las=3)
 ```
 
 ```{r}
-hist(countData$SEDM_2P_1,br=100)
+hist(countData[,1],br=100)
 ```
 ```{r}
 logCountData=log2(1+countData)
-hist(logCountData$SEDM_2P_1,br=100)
+hist(logCountData[,1],br=100)
 ```
 
 ```{r}
@@ -77,7 +79,6 @@ colData=as.data.frame(cbind(colnames(countData), inh, treatment))
 ```{r}
 dds=DESeqDataSetFromMatrix(countData = countData, colData = colData, design=~inh)
 dds=DESeq(dds)
-
 ```
 
 
